# Python-advanced

./: README.md  main.py  pyproject.toml
data/: flights_small.csv  ventas.csv
notebooks/: 1. Machine Learning. Modelización Avanzada.ipynb  2. Machine Learning. Técnicas complementarias.ipynb
